--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -98,7 +98,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  model-specific-tests:
+  minimal-model-specific-tests:
     runs-on: gpu-runner
     strategy:
       fail-fast: false # Don't cancel all on first failure
@@ -106,7 +106,7 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
           - transformers_llama3cpu_8b
-          - transformers_llama3gpu_8b
+          # - transformers_llama3gpu_8b Does not reliably work on GPU build machines
 
     steps:
       - uses: actions/checkout@v4
@@ -148,6 +148,7 @@ jobs:
       - name: Check GPU available
         run: |
           python -c "import torch; assert torch.cuda.is_available()"
+      # Note that we run a minimal set of tests here
       - name: Run minimal tests for ${{ matrix.model }}
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
