--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -18,7 +18,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  general:
 
     runs-on: gpu-runner
     strategy:
@@ -93,6 +93,69 @@ jobs:
           pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
             -vv \
             ./tests/need_credentials
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+  minimal-model-specific-tests:
+    runs-on: gpu-runner
+    strategy:
+      fail-fast: false # Don't cancel all on first failure
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        model:
+          - transformers_llama3cpu_8b
+          # - transformers_llama3gpu_8b Does not reliably work on GPU build machines
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        shell: bash
+        run: |
+           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
+           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Show GPUs
+        run: |
+          nvidia-smi
+      - name: Update Ubuntu
+        run: |
+          sudo apt-get update
+          sudo apt-get -y upgrade
+      - name: Ensure NVIDIA SDK available
+        run: |
+          sudo apt-get -y install cuda-toolkit
+          echo "/usr/local/cuda-12.5/bin" >> $GITHUB_PATH
+      - name: Install dependencies
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          pip install -e .[schemas,test,bench]
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Other dependencies
+        run: |
+          pip install sentencepiece
+      - name: GPU pip installs
+        run: |
+          pip install accelerate
+          pip uninstall -y llama-cpp-python
+          CMAKE_ARGS="-DGGML_CUDA=on" pip install "llama-cpp-python!=0.2.58,!=0.2.75"
+      - name: Check GPU available
+        run: |
+          python -c "import torch; assert torch.cuda.is_available()"
+      # Note that we run a minimal set of tests here
+      - name: Run minimal tests for ${{ matrix.model }}
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
+            --selected_model ${{ matrix.model }} \
+            ./tests/model_integration/test_model.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
