--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -105,6 +105,7 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
+          - hfllama_gemma2cpu_9b
           - transformers_gemma2cpu_9b
           - transformers_gemma2gpu_9b
           - transformers_llama3cpu_8b
