--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -63,11 +63,11 @@ jobs:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         model:
-          - "transformers_gpt2cpu"
-          - "transformers_phi2cpu"
-          # - "transformers_mistral_7b" See Issue 713
+          - "transformers_gpt2_cpu"
+          - "transformers_phi2_cpu"
+          # - "transformers_mistral_7b_cpu" See Issue 713
           - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b"
+          - "hfllama_mistral_7b_cpu"
           - "transformers_phi3_mini_4k_instruct_cpu"
           - "hfllama_phi3_mini_4k_instruct_cpu"
     with:
@@ -104,11 +104,11 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
         model:
-          - "transformers_gpt2cpu"
-          - "transformers_phi2cpu"
-          # - "transformers_mistral_7b" See Issue 713
+          - "transformers_gpt2_cpu"
+          - "transformers_phi2_cpu"
+          # - "transformers_mistral_7b_cpu" See Issue 713
           - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b"
+          - "hfllama_mistral_7b_cpu"
           - "transformers_phi3_mini_4k_instruct_cpu"
           - "hfllama_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
@@ -149,11 +149,11 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
-          - "transformers_gpt2cpu"
-          - "transformers_phi2cpu"
-          # - "transformers_mistral_7b" See Issue 713
+          - "transformers_gpt2_cpu"
+          - "transformers_phi2_cpu"
+          # - "transformers_mistral_7b_cpu" See Issue 713
           - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b"
+          - "hfllama_mistral_7b_cpu"
           # - "transformers_phi3_mini_4k_instruct_cpu" Gives trouble on MacOS
           - "hfllama_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
@@ -169,11 +169,11 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
-          - "transformers_gpt2cpu"
-          # - "transformers_phi2cpu" Seems to get stuck
-          # - "transformers_mistral_7b" See Issue 713
+          - "transformers_gpt2_cpu"
+          # - "transformers_phi2_cpu" Seems to get stuck
+          # - "transformers_mistral_7b_cpu" See Issue 713
           # - "hfllama_llama2_7b_cpu" Getting stuck with llama-cpp-python 0.2.77
-          # - "hfllama_mistral_7b"
+          # - "hfllama_mistral_7b_cpu"
           # - "transformers_phi3_mini_4k_instruct_cpu" Gives trouble on MacOS
           - "hfllama_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
@@ -189,11 +189,11 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
-          - "transformers_gpt2cpu"
-          - "transformers_phi2cpu"
-          # - "transformers_mistral_7b" See Issue 713
+          - "transformers_gpt2_cpu"
+          - "transformers_phi2_cpu"
+          # - "transformers_mistral_7b_cpu" See Issue 713
           - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b"
+          - "hfllama_mistral_7b_cpu"
           - "transformers_phi3_mini_4k_instruct_cpu"
           - "hfllama_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
