--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -66,10 +66,10 @@ jobs:
           - "transformers_gpt2_cpu"
           - "transformers_phi2_cpu"
           # - "transformers_mistral_7b_cpu" See Issue 713
-          - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b_cpu"
+          - "llamacpp_llama2_7b_cpu"
+          - "llamacpp_mistral_7b_cpu"
           - "transformers_phi3_mini_4k_instruct_cpu"
-          - "hfllama_phi3_mini_4k_instruct_cpu"
+          - "llamacpp_phi3_mini_4k_instruct_cpu"
     with:
       os: Large_Linux
       python-version: "3.12"
@@ -107,10 +107,10 @@ jobs:
           - "transformers_gpt2_cpu"
           - "transformers_phi2_cpu"
           # - "transformers_mistral_7b_cpu" See Issue 713
-          - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b_cpu"
+          - "llamacpp_llama2_7b_cpu"
+          - "llamacpp_mistral_7b_cpu"
           - "transformers_phi3_mini_4k_instruct_cpu"
-          - "hfllama_phi3_mini_4k_instruct_cpu"
+          - "llamacpp_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
       os: Large_Linux
@@ -152,10 +152,10 @@ jobs:
           - "transformers_gpt2_cpu"
           - "transformers_phi2_cpu"
           # - "transformers_mistral_7b_cpu" See Issue 713
-          - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b_cpu"
+          - "llamacpp_llama2_7b_cpu"
+          - "llamacpp_mistral_7b_cpu"
           # - "transformers_phi3_mini_4k_instruct_cpu" Gives trouble on MacOS
-          - "hfllama_phi3_mini_4k_instruct_cpu"
+          - "llamacpp_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
       os: macos-12
@@ -172,10 +172,10 @@ jobs:
           - "transformers_gpt2_cpu"
           # - "transformers_phi2_cpu" Seems to get stuck
           # - "transformers_mistral_7b_cpu" See Issue 713
-          # - "hfllama_llama2_7b_cpu" Getting stuck with llama-cpp-python 0.2.77
-          # - "hfllama_mistral_7b_cpu"
+          # - "llamacpp_llama2_7b_cpu" Getting stuck with llama-cpp-python 0.2.77
+          # - "llamacpp_mistral_7b_cpu"
           # - "transformers_phi3_mini_4k_instruct_cpu" Gives trouble on MacOS
-          - "hfllama_phi3_mini_4k_instruct_cpu"
+          - "llamacpp_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
       os: macos-latest
@@ -192,10 +192,10 @@ jobs:
           - "transformers_gpt2_cpu"
           - "transformers_phi2_cpu"
           # - "transformers_mistral_7b_cpu" See Issue 713
-          - "hfllama_llama2_7b_cpu"
-          - "hfllama_mistral_7b_cpu"
+          - "llamacpp_llama2_7b_cpu"
+          - "llamacpp_mistral_7b_cpu"
           - "transformers_phi3_mini_4k_instruct_cpu"
-          - "hfllama_phi3_mini_4k_instruct_cpu"
+          - "llamacpp_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
       os: Large_Windows
