Hook new model into PR gate

--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -70,6 +70,7 @@ jobs:
           - "hfllama_mistral_7b"
           - "transformers_phi3cpu_mini_4k_instruct"
           - "hfllama_phi3cpu_mini_4k_instruct"
+          - "hfllama_llama3cpu_9b"
     with:
       os: Large_Linux
       python-version: "3.12"
@@ -111,6 +112,7 @@ jobs:
           - "hfllama_mistral_7b"
           - "transformers_phi3cpu_mini_4k_instruct"
           - "hfllama_phi3cpu_mini_4k_instruct"
+          - "hfllama_llama3cpu_9b"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
       os: Large_Linux
@@ -156,6 +158,7 @@ jobs:
           - "hfllama_mistral_7b"
           # - "transformers_phi3cpu_mini_4k_instruct" Gives trouble on MacOS
           - "hfllama_phi3cpu_mini_4k_instruct"
+          - "hfllama_llama3cpu_9b"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
       os: macos-12
@@ -196,6 +199,7 @@ jobs:
           - "hfllama_mistral_7b"
           - "transformers_phi3cpu_mini_4k_instruct"
           - "hfllama_phi3cpu_mini_4k_instruct"
+          - "hfllama_llama3cpu_9b"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
       os: Large_Windows
