--- a/.github/workflows/action_gpu_basic_tests.yml
+++ b/.github/workflows/action_gpu_basic_tests.yml
@@ -16,10 +16,10 @@ jobs:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         model:
-          - "gpt2gpu"
-          - "phi2gpu"
-          # - "transformers_phi3_small_8k_instruct" Does not run on tesla t4
-          # - "hfllama_7b_gpu" Keeps causing intermittent segfaults
+          - "transformers_gpt2_gpu"
+          - "transformers_phi2_gpu"
+          # - "transformers_phi3_small_8k_instruct_gpu" Does not run on tesla t4
+          # - "llamacpp_llama2_7b_gpu" Keeps causing intermittent segfaults
     runs-on: ${{ inputs.os }}
 
     steps:
