--- a/.github/workflows/action_plain_basic_tests.yml
+++ b/.github/workflows/action_plain_basic_tests.yml
@@ -42,7 +42,7 @@ jobs:
           pip uninstall -y llama-cpp-python
           pip install "llama-cpp-python!=0.2.58,!=0.2.79,!=0.2.84"
           echo "=============================="
-          pip uninstall transformers
+          pip uninstall -y transformers
           pip install "transformers!=4.43.0,!=4.43.1,!=4.43.2,!=4.43.3" # Issue 965
       - name: Run tests (except server)
         shell: bash
