[Build] Move transformers exclusion to workflow (#975)
Trying to work around #965 by excluding `transformers` versions in `setup.py` wasn't the best approach (the problem only appears for GPT2 on MacOS-ARM). Move the exclusions into the workflow files, as we do for `llama-cpp-python`

--- a/.github/workflows/action_plain_basic_tests.yml
+++ b/.github/workflows/action_plain_basic_tests.yml
@@ -38,8 +38,12 @@ jobs:
       - name: Install model-specific dependencies
         run: |
           pip install sentencepiece
+          echo "=============================="
           pip uninstall -y llama-cpp-python
           pip install "llama-cpp-python!=0.2.58,!=0.2.79,!=0.2.84"
+          echo "=============================="
+          pip uninstall -y transformers
+          pip install "transformers!=4.43.0,!=4.43.1,!=4.43.2,!=4.43.3" # Issue 965
       - name: Run tests (except server)
         shell: bash
         run: |
