[Build] Fix CUDA SDK version (#985)
It appears that there has been a new CUDA toolkit released, so update the `PATH` appropriately.

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Ensure NVIDIA SDK available
         run: |
           sudo apt-get -y install cuda-toolkit
-          echo "/usr/local/cuda-12.5/bin" >> $GITHUB_PATH
+          echo "/usr/local/cuda-12.6/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -132,7 +132,7 @@ jobs:
       - name: Ensure NVIDIA SDK available
         run: |
           sudo apt-get -y install cuda-toolkit
-          echo "/usr/local/cuda-12.5/bin" >> $GITHUB_PATH
+          echo "/usr/local/cuda-12.6/bin" >> $GITHUB_PATH
       - name: Install dependencies
         shell: bash
         run: |
@@ -150,6 +150,9 @@ jobs:
         run: |
           pip install accelerate
           pip uninstall -y llama-cpp-python
+          echo "======================"
+          nvcc --version
+          echo "======================"
           CMAKE_ARGS="-DGGML_CUDA=on" pip install "llama-cpp-python!=0.2.58,!=0.2.75"
       - name: Check GPU available
         run: |
