A nice idea; pity it doesn't work

--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -170,11 +170,11 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
           # - "transformers_gpt2_cpu" See #965
-          - "transformers_phi2_cpu"
-          - "transformers_mistral_7b_cpu"
-          - "llamacpp_llama2_7b_cpu"
-          - "llamacpp_mistral_7b_cpu"
-          - "transformers_phi3_mini_4k_instruct_cpu"
+          # - "transformers_phi2_cpu" Seems to get stuck
+          # - "transformers_mistral_7b_cpu" See Issue 713
+          # - "llamacpp_llama2_7b_cpu" Getting stuck with llama-cpp-python 0.2.77
+          # - "llamacpp_mistral_7b_cpu"
+          # - "transformers_phi3_mini_4k_instruct_cpu" Gives trouble on MacOS
           - "llamacpp_phi3_mini_4k_instruct_cpu"
     uses: ./.github/workflows/action_plain_basic_tests.yml
     with:
