--- a/.github/workflows/pypi_upload.yml
+++ b/.github/workflows/pypi_upload.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Install cibuildwheel
       # Nb. keep cibuildwheel version pin consistent with job below
         run: pipx install cibuildwheel==2.17.0
+      - name: Install pybind11
+        run: pipx install pybind11==2.13.1
       - id: set-matrix
         run: |
           MATRIX=$(
