--- a/.github/workflows/pypi_upload.yml
+++ b/.github/workflows/pypi_upload.yml
@@ -21,8 +21,6 @@ jobs:
       - name: Install cibuildwheel
       # Nb. keep cibuildwheel version pin consistent with job below
         run: pipx install cibuildwheel==2.17.0
-      - name: Install pybind11
-        run: pipx install pybind11==2.13.1
       - id: set-matrix
         run: |
           MATRIX=$(
@@ -52,6 +50,7 @@ jobs:
       CIBW_BUILD_VERBOSITY: 1
       CIBW_BEFORE_ALL_LINUX: "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"
       CIBW_ENVIRONMENT: 'PATH="$PATH:$HOME/.cargo/bin"'
+      CIBW_SKIP: pp*
 
     steps:
       - name: Check out the repo
