--- a/.github/workflows/pypi_upload.yml
+++ b/.github/workflows/pypi_upload.yml
@@ -16,6 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       include: ${{ steps.set-matrix.outputs.include }}
+
+    env:
+      CIBW_SKIP: pp*
+      
     steps:
       - uses: actions/checkout@v4
       - name: Install cibuildwheel
