--- a/.github/workflows/action_plain_basic_tests.yml
+++ b/.github/workflows/action_plain_basic_tests.yml
@@ -12,6 +12,14 @@ on:
       model:
         required: true
         type: string
+      AZUREAI_GUIDANCE_ENABLED_URL:
+        required: true
+        type: string
+        default: NOT_A_VALUE
+      AZUREAI_GUIDANCE_ENABLED_URL_KEY:
+        required: true
+        type: string
+        default: NOT_A_KEY
 
 
 jobs:
@@ -46,6 +54,9 @@ jobs:
           pip install "transformers!=4.43.0,!=4.43.1,!=4.43.2,!=4.43.3" # Issue 965
       - name: Run tests (except server)
         shell: bash
+        env:
+          AZUREAI_GUIDANCE_ENABLED_URL: ${{ inputs.AZUREAI_GUIDANCE_ENABLED_URL }}
+          AZUREAI_GUIDANCE_ENABLED_URL_KEY: ${{ inputs.AZUREAI_GUIDANCE_ENABLED_URL_KEY }}
         run: |
           pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
             --selected_model ${{ inputs.model }} \
