--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -159,6 +159,8 @@ jobs:
           python -c "import torch; assert torch.cuda.is_available()"
       # Note that we run a minimal set of tests here
       - name: Run minimal tests for ${{ matrix.model }}
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
             --selected_model ${{ matrix.model }} \
