--- a/.github/workflows/call_gpu_tests.yml
+++ b/.github/workflows/call_gpu_tests.yml
@@ -9,6 +9,16 @@ on:
       python-version:
         required: true
         type: string
+  workflow_dispatch:
+    inputs:
+      os:
+        required: false
+        type: string
+        default: gpu-runner
+      python-version:
+        required: false
+        type: string
+        default: "3.12"
 
 jobs:
   basic-tests-on-gpu:
