move the GPU matrix out of the call_gpu_tests action

--- a/.github/workflows/call_cpu_tests.yml
+++ b/.github/workflows/call_cpu_tests.yml
@@ -25,8 +25,7 @@ on:
       model:
         required: false
         type: string
-        default: "transformers_gpt2_cpu"
-      
+        default: "transformers_gpt2_cpu" # also try "llamacpp_llama2_7b_cpu", etc
 
 jobs:
   run-plain-basic-tests:
