--- a/.github/workflows/call_cpu_tests.yml
+++ b/.github/workflows/call_cpu_tests.yml
@@ -26,12 +26,19 @@ on:
         required: false
         type: string
         default: "transformers_gpt2_cpu" # also try "llamacpp_llama2_7b_cpu", etc
+      commit_id:
+        description: 'Branch or Commit ID (optional)'
+        required: false
+        type: string
 
 jobs:
   run-plain-basic-tests:
     runs-on: ${{ inputs.os }}
     steps:
-      - uses: actions/checkout@v4
+      - name: checkout repo
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
       - name: Install Rust
         shell: bash
         run: |
