--- a/.github/workflows/call_server_tests.yml
+++ b/.github/workflows/call_server_tests.yml
@@ -29,7 +29,7 @@ jobs:
   server-tests:
     runs-on: ${{ inputs.os }}
     steps:
-      - name: checkout repo
+      - name: checkout repo ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
