--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -8,18 +8,20 @@ on:
       commit_id:
         description: 'Branch or Commit ID (optional)'
         required: false
+        type: string
   schedule:
     - cron: "0 12 * * *"
 
 jobs:
   unit-tests:
     strategy:
+      fail-fast: false # Don't cancel all on first failure
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12"]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: checkout repo
+      - name: checkout repo ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
