add model tests into the pull_request github action

--- a/.github/workflows/call_cpu_tests.yml
+++ b/.github/workflows/call_cpu_tests.yml
@@ -17,7 +17,7 @@ on:
       os:
         required: false
         type: string
-        default: Large_Linux # can instead use Large_Windows or the default OSes like macos-latest
+        default: "Large_Linux" # can instead use "Large_Windows" or the default OSes like "macos-latest"
       python-version:
         required: false
         type: string
