--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,7 +10,7 @@ on:
         required: false
         type: string
   schedule:
-    - cron: "0 12 * * *"
+    - cron: "0 11 * * *"
 
 jobs:
   unit-tests:
@@ -42,3 +42,40 @@ jobs:
       - name: Unit Tests
         run: |
           pytest -vv ./tests/unit
+
+  cpu_tests:
+    uses: ./.github/workflows/call_cpu_tests.yml
+    strategy:
+      fail-fast: false # Don't cancel all on first failure
+      matrix:
+        os: ["Large_Linux", "Large_Windows"]  # also try "macos-latest"
+        python-version: ["3.11", "3.12"]
+        model:
+          - "transformers_gpt2_cpu"
+          - "llamacpp_phi3_mini_4k_instruct_cpu"
+          # - "transformers_phi2_cpu" Seems to get stuck
+          # - "transformers_mistral_7b_cpu" See Issue 713
+          # - "llamacpp_llama2_7b_cpu" Getting stuck with llama-cpp-python 0.2.77
+          # - "llamacpp_mistral_7b_cpu"
+          # - "transformers_phi3_mini_4k_instruct_cpu" Gives trouble on MacOS
+    with:
+      os: ${{ matrix.os }}
+      python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
+
+  gpu_tests:
+    uses: ./.github/workflows/call_gpu_tests.yml
+    strategy:
+      fail-fast: false # Don't cancel all on first failure
+      matrix:
+        os: ["gpu-runner"]
+        python-version: ["3.11", "3.12"]
+        model:
+          - "transformers_gpt2_gpu"
+          - "transformers_phi2_gpu"
+          # - "transformers_phi3_small_8k_instruct_gpu" Does not run on tesla t4
+          # - "llamacpp_llama2_7b_gpu" Keeps causing intermittent segfaults
+    with:
+      os: ${{ matrix.os }}
+      python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
