--- a/.github/workflows/call_server_tests.yml
+++ b/.github/workflows/call_server_tests.yml
@@ -26,7 +26,7 @@ on:
         type: string
 
 jobs:
-  server-tests:
+  server_tests:
     runs-on: ${{ inputs.os }}
     steps:
       - name: Checkout repo at ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
