modify start times of the github actions to only show errors in the pull_request github action except for a short period each day

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,7 +10,8 @@ on:
         required: false
         type: string
   schedule:
-    - cron: "0 11 * * *"
+    # Run at 11:00 UTC every day
+    - cron: "00 11 * * *"
 
 jobs:
   unit_tests:
