--- a/.github/workflows/pypi_upload.yml
+++ b/.github/workflows/pypi_upload.yml
@@ -161,9 +161,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - run: pip install guidance -f ./wheelhouse/
+      - run: python -m pip install guidance -f ./wheelhouse/
         name: Install guidance from wheels
-      - run: pip install transformers torch
+      - run: python -m pip install transformers torch
         name: Other installs
       # - run: python -c "import guidance; import transformers; lm = guidance.models.Transformers('gpt2'); lm += '1,2,3,4,5,' + guidance.gen('num', max_tokens=5, temperature=0); print(f'\n Transformers Version:{transformers.__version__}\n\n{str(lm)=}\n'); assert lm['num'].startswith('6')"
       #   name: Run smoke test
