--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -40,8 +40,8 @@ jobs:
            echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - name: Install guidance
         run: |
-          pip install --upgrade pip
-          pip install -e .[all,test]
+          python -m pip install --upgrade pip
+          python -m pip install -e .[all,test]
       - name: Azure login
         uses: azure/login@v2
         with:
