--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,13 +33,13 @@ jobs:
       - name: Minimal install
         run: |
           python -m pip install --upgrade pip
-          pip install -e .
+          python -m pip install -e .
       - name: Attempt import
         run: |
           python -c "import guidance"
       - name: Bigger install
         run: |
-          pip install -e .[unittest]
+          python -m pip install -e .[unittest]
       - name: Unit Tests
         run: |
           pytest -vv ./tests/unit
