--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repo at ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
@@ -60,7 +60,7 @@ jobs:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         os: ["Large_Linux", "Large_Windows"]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.9", "3.12"]
         model:
           - "transformers_gpt2_cpu"
           - "llamacpp_phi3_mini_4k_instruct_cpu"
@@ -75,7 +75,7 @@ jobs:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         os: ["gpu-runner"]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.9", "3.12"]
         model:
           - "transformers_gpt2_gpu"
           - "transformers_phi2_gpu"
