--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -86,9 +86,10 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
           - "transformers_gpt2_cpu"
+          - "transformers_gemma2_9b_cpu"
+          - "llamacpp_llama2_7b_cpu"
           - "llamacpp_phi3_mini_4k_instruct_cpu"
           - "llamacpp_gemma2_9b_cpu"
-          - "transformers_gemma2_9b_cpu"
           - "transformers_llama3_8b_cpu"
     uses: ./.github/workflows/call_cpu_tests.yml
     with:
@@ -105,7 +106,9 @@ jobs:
         os: ["gpu-runner"]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
+          - "transformers_gpt2_gpu"
           - "transformers_gemma2_9b_gpu"
+          - "llamacpp_llama2_7b_gpu"
     uses: ./.github/workflows/call_gpu_tests.yml
     with:
       os: ${{ matrix.os }}
